--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,104 +1,111 @@
+# CMake build for Umicom Studio IDE
 # -----------------------------------------------------------------------------
-# Umicom Studio IDE (USIDE)
-# File: CMakeLists.txt
-# PURPOSE: Project build system (MinGW/Windows + GTK4). Provides a debug
-#          console mode for development and a GUI subsystem for releases.
+# This file is a *complete* and self‑contained CMake configuration intended
+# for MSYS2/MinGW on Windows, but it also works on Linux/macOS with pkg-config.
 #
-# Created by: Umicom Foundation (https://umicom.foundation/)
-# Author: Sammy Hegab (with build fixes)
-# Date: 15-09-2025
-# License: MIT
+# Highlights:
+#   • Option USIDE_DEV_CONSOLE toggles Console vs GUI subsystem on Windows.
+#     - Console is handy during development to see GLib/printf logs.
+#     - GUI uses wWinMain from src/win_launcher.c.
+#   • Adds include paths for all subfolders and pkg‑config dependencies.
+#   • Excludes scratch/test sources (e.g. src/gtk_smoke.c) from the main app.
+#   • Uses -Wall/-Wextra and keeps deprecated GTK warnings visible by default.
+#
+# Usage (MSYS2 MinGW64 shell or PowerShell with PATH set to msys64\mingw64\bin):
+#   cmake -S . -B build-ninja -G Ninja -DCMAKE_BUILD_TYPE=Debug -DUSIDE_DEV_CONSOLE=ON
+#   ninja -C build-ninja -j1
 # -----------------------------------------------------------------------------
 
 cmake_minimum_required(VERSION 3.20)
-project(umicom-studio-ide C)
+project(ustudio C)
 
-# C standard and warnings
+# ---- Options -----------------------------------------------------------------
+option(USIDE_DEV_CONSOLE "Build with a console (helps to see logs during dev)" ON)
+
+# ---- Language / Warnings -----------------------------------------------------
 set(CMAKE_C_STANDARD 11)
 set(CMAKE_C_STANDARD_REQUIRED ON)
+set(CMAKE_C_EXTENSIONS ON)
 
-option(USIDE_DEV_CONSOLE "Build as console app on Windows (helpful for logs)" ON)
-
-# Dependencies (GTK4 stack)
+# ---- Dependencies via pkg-config --------------------------------------------
 find_package(PkgConfig REQUIRED)
-pkg_check_modules(GTK4 REQUIRED gtk4)
-pkg_check_modules(PANGO REQUIRED pango)
-pkg_check_modules(GDKPIXBUF REQUIRED gdk-pixbuf-2.0)
-pkg_check_modules(CAIRO REQUIRED cairo)
-pkg_check_modules(HARFBUZZ REQUIRED harfbuzz)
-pkg_check_modules(GRAPHENE REQUIRED graphene-1.0)
-pkg_check_modules(GLIB2 REQUIRED glib-2.0 gobject-2.0 gio-2.0)
-pkg_check_modules(JSONGLIB REQUIRED json-glib-1.0)
-pkg_check_modules(CURL REQUIRED libcurl)
-pkg_check_modules(SOUP REQUIRED libsoup-3.0)
-
-# Sources
-file(GLOB_RECURSE USIDE_SRC CONFIGURE_DEPENDS
-    "${CMAKE_CURRENT_SOURCE_DIR}/src/*.c"
+pkg_check_modules(USIDE_PKG REQUIRED
+  gtk4
+  pango
+  gdk-pixbuf-2.0
+  cairo
+  harfbuzz
+  graphene-1.0
+  glib-2.0
+  gobject-2.0
+  gio-2.0
+  json-glib-1.0
+  libsoup-3.0
+  libcurl
 )
 
-# Avoid accidentally picking a duplicated Windows launcher under src/src/
-# (just in case an old copy exists).
-list(FILTER USIDE_SRC EXCLUDE REGEX ".*/src/src/.*")
+# ---- Source discovery --------------------------------------------------------
+# Grab all .c files under src/, then *exclude* scratch/test entry points that may
+# define their own main() or are not meant to ship with the IDE.
+file(GLOB_RECURSE USIDE_ALL_C "${CMAKE_SOURCE_DIR}/src/*.c")
 
-# Choose subsystem on Windows
-if(WIN32 AND NOT USIDE_DEV_CONSOLE)
-    add_definitions(-DUSIDE_GUI_BUILD=1)
-    add_executable(ustudio WIN32 ${USIDE_SRC})
-else()
-    add_executable(ustudio ${USIDE_SRC})
-endif()
-
-target_include_directories(ustudio PRIVATE
-    ${CMAKE_CURRENT_SOURCE_DIR}/src
-    ${CMAKE_CURRENT_SOURCE_DIR}/src/editor
-    ${CMAKE_CURRENT_SOURCE_DIR}/src/gui
-    ${CMAKE_CURRENT_SOURCE_DIR}/src/core
-    ${CMAKE_CURRENT_SOURCE_DIR}/src/panes
-    ${CMAKE_CURRENT_SOURCE_DIR}/src/plugins
-    ${CMAKE_CURRENT_SOURCE_DIR}/src/plugins/transpile
-    ${CMAKE_CURRENT_SOURCE_DIR}/src/build
-    ${CMAKE_CURRENT_SOURCE_DIR}/src/llm
-    ${CMAKE_CURRENT_SOURCE_DIR}/src/llm/providers
-    ${CMAKE_CURRENT_SOURCE_DIR}/src/search
-    ${CMAKE_CURRENT_SOURCE_DIR}/src/ui
-    SYSTEM ${GTK4_INCLUDE_DIRS} ${PANGO_INCLUDE_DIRS} ${GDKPIXBUF_INCLUDE_DIRS}
-           ${CAIRO_INCLUDE_DIRS} ${HARFBUZZ_INCLUDE_DIRS} ${GRAPHENE_INCLUDE_DIRS}
-           ${GLIB2_INCLUDE_DIRS} ${JSONGLIB_INCLUDE_DIRS} ${CURL_INCLUDE_DIRS}
-           ${SOUP_INCLUDE_DIRS}
+# Remove experimental/demo sources from the main target if present:
+foreach(BAD IN ITEMS
+  "${CMAKE_SOURCE_DIR}/src/gtk_smoke.c"
 )
+  list(REMOVE_ITEM USIDE_ALL_C "${BAD}")
+endforeach()
 
-# Compile options
-target_compile_options(ustudio PRIVATE
-    -Wall -Wextra -Wno-missing-field-initializers
-)
-
-# Link
-target_link_directories(ustudio PRIVATE
-    ${GTK4_LIBRARY_DIRS} ${PANGO_LIBRARY_DIRS} ${GDKPIXBUF_LIBRARY_DIRS}
-    ${CAIRO_LIBRARY_DIRS} ${HARFBUZZ_LIBRARY_DIRS} ${GRAPHENE_LIBRARY_DIRS}
-    ${GLIB2_LIBRARY_DIRS} ${JSONGLIB_LIBRARY_DIRS} ${CURL_LIBRARY_DIRS}
-    ${SOUP_LIBRARY_DIRS}
-)
-
-target_link_libraries(ustudio PRIVATE
-    ${GTK4_LIBRARIES} ${PANGO_LIBRARIES} ${GDKPIXBUF_LIBRARIES}
-    ${CAIRO_LIBRARIES} ${HARFBUZZ_LIBRARIES} ${GRAPHENE_LIBRARIES}
-    ${GLIB2_LIBRARIES} ${JSONGLIB_LIBRARIES} ${CURL_LIBRARIES}
-    ${SOUP_LIBRARIES}
-)
-
-# Windows specifics
+# Make sure the Windows launcher is always compiled on Windows to provide
+# wWinMain / wmain shims when we use the GUI subsystem.
 if(WIN32)
-    # Only use -municode for GUI builds; console builds rely on main()
-    if(NOT USIDE_DEV_CONSOLE)
-        target_link_options(ustudio PRIVATE -municode -Wl,--subsystem,windows)
-    endif()
-    # Base Win32 libs
-    target_link_libraries(ustudio PRIVATE
-        kernel32 user32 gdi32 winspool shell32 ole32 oleaut32 uuid comdlg32 advapi32
-    )
+  list(APPEND USIDE_ALL_C "${CMAKE_SOURCE_DIR}/src/win_launcher.c")
 endif()
 
-# Nice compile_commands.json for tooling
-set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+# ---- Target ------------------------------------------------------------------
+# On Windows, use WIN32 for GUI subsystem when console is OFF; otherwise build a
+# normal console exe. On non-Windows, WIN32 is ignored anyway.
+if(WIN32 AND NOT USIDE_DEV_CONSOLE)
+  add_executable(ustudio WIN32 ${USIDE_ALL_C})
+else()
+  add_executable(ustudio ${USIDE_ALL_C})
+endif()
+
+# Includes: project headers + pkg-config
+target_include_directories(ustudio PRIVATE
+  "${CMAKE_SOURCE_DIR}/src"
+  "${CMAKE_SOURCE_DIR}/src/editor"
+  "${CMAKE_SOURCE_DIR}/src/gui"
+  "${CMAKE_SOURCE_DIR}/src/core"
+  "${CMAKE_SOURCE_DIR}/src/panes"
+  "${CMAKE_SOURCE_DIR}/src/plugins"
+  "${CMAKE_SOURCE_DIR}/src/plugins/transpile"
+  "${CMAKE_SOURCE_DIR}/src/build"
+  "${CMAKE_SOURCE_DIR}/src/llm"
+  "${CMAKE_SOURCE_DIR}/src/llm/providers"
+  "${CMAKE_SOURCE_DIR}/src/search"
+  "${CMAKE_SOURCE_DIR}/src/ui"
+  ${USIDE_PKG_INCLUDE_DIRS}
+)
+
+target_compile_options(ustudio PRIVATE
+  -Wall -Wextra -Wno-missing-field-initializers
+)
+
+# Libraries discovered by pkg-config
+target_link_libraries(ustudio PRIVATE ${USIDE_PKG_LIBRARIES})
+
+# Propagate any extra flags from pkg-config (MSYS2 typically needs these)
+target_compile_options(ustudio PRIVATE ${USIDE_PKG_CFLAGS_OTHER})
+target_link_options(ustudio PRIVATE ${USIDE_PKG_LDFLAGS_OTHER})
+
+# Windows specific: make sure we use Unicode entry points and safe defaults.
+if(MINGW)
+  target_compile_definitions(ustudio PRIVATE UNICODE _UNICODE)
+  target_compile_options(ustudio PRIVATE -municode)
+  # Hardened linker flags are generally OK
+  target_link_options(ustudio PRIVATE -Wl,--dynamicbase -Wl,--nxcompat)
+endif()
+
+# Install (optional)
+install(TARGETS ustudio RUNTIME DESTINATION bin)
